added a pesudo code example of inscription

--- a/docs/pages/surge-building-blocks/zkp-verifier-network.mdx
+++ b/docs/pages/surge-building-blocks/zkp-verifier-network.mdx
@@ -65,6 +65,13 @@ Once a proof is confirmed, it is queued for inscription onto the Bitcoin blockch
 <ZoomImage src="/assets/Bitcoin_inscription.png" alt="user tx" />
 <p className="text-center">An inscription on Bitcoin</p>
 
+Here is a pseudo code explanation of how a bitcoin inscription is constructed:
+
+<ZoomImage
+  alt="Bitcoin Inscription Pseudo code"
+  src="/assets/pseudo_inscription_code.png"
+/>
+
 ## Benefits of Our Approach
 
 **Security**: By using the Bitcoin blockchain for final proof inscription, we harness its security features, ensuring the highest level of integrity for our proofs.
