fix: minor content update

--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -1,11 +1,11 @@
 ---
-title: Journey of Rollups on Bitcoin
+title: Evolution of Rollups on Bitcoin
 description: Unwrapping rollups one layer at a time
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Journey of Rollups on Bitcoin [Unwrapping rollups one layer at a time]
+# Evolution of Rollups on Bitcoin [Unwrapping rollups one layer at a time]
 
 Lets see the Bitcoin Roadmap from 2013 to Now,
 
@@ -15,9 +15,8 @@ ZK Rollups are a layer-2 scaling solution that perform transaction execution out
 
 **Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges,** and **BitVM** collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
 
-## Trustless ZK Rollup
-
-Lets Understand, How can we build a trustless ZK Rollup
+## Trust-Minimized zk Rollup
+Lets Understand, How can we build a trust-minimised ZK Rollup
 
 <ZoomImage src="/assets/trustless-zk.png" alt="Trustless Zk rollup" />
 
