--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -13,7 +13,7 @@ import "react-medium-image-zoom/dist/styles.css";
   <div className="flex flex-col items-center justify-center">
     <img className="hidden dark:block h-24" src="/assets/surge_short_dark.svg" alt="docs" />
     <img className="block dark:hidden h-24" src="/assets/surge_short_lg.svg" alt="docs" />
-      <HomePage.Tagline className="!text-[40px] !font-bold mb-5">Surge Docs</HomePage.Tagline>
+      <HomePage.Tagline className="!text-[40px] !font-bold mb-5">Surge</HomePage.Tagline>
       <HomePage.Description className="mb-10 !text-base !font-semibold	 dark:!text-grey-100 !text-grey-100">A modular Bitcoin Rollup-as-a-Service with a Decentralised verifier network & MPC-TSS Bridge</HomePage.Description>
     <div className="grid grid-cols-1 md:grid-cols-4 gap-5">
       <Button href="/overview/introduction" className="customBtn">
