--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -49,9 +49,9 @@ As our proofs are directly inscribed onto Bitcoin L1, they can be verified by an
 
 ### Data Availability
 
-Surge offers multiple Data Availability (DA) layer options to suit different requirements and cost considerations:
+Surge offers multiple alternate Data Availability (DA) options to suit different requirements and cost considerations:
 
-- Native Bitcoin DAs: Options like Nubit for those preferring integration closely tied to Bitcoin.
+- Native Bitcoin DA Layer: Options like Nubit for those preferring integration closely tied to Bitcoin.
 
 - Non-native DA Layers: Alternatives like Avail, Eigen DA, and Celestia DA, offer flexibility and scalability.
 
