--- a/docs/pages/users-tooling/node-setup-guide.mdx
+++ b/docs/pages/users-tooling/node-setup-guide.mdx
@@ -1,9 +1,9 @@
 ---
-title: Surge | Node Setup Guide
+title: Surge | Custom Signet Node Setup Guide
 description: Setup Nodes for Devnet
 ---
 
-# Node Setup Guide [Step by Step guide to set up up nodes to participate in Devnet]
+# Custom Signet Node Setup Guide [Step by Step guide to set up up nodes to participate in Devnet]
 **Custom Signet Explorer**: https://mempool.signet.surge.dev
 
 This guide provides a step-by-step walkthrough for setting up nodes to participate in the Surge Devnet. It covers the setup of a custom Bitcoin Signet node and a Surge node.
