--- a/docs/pages/overview/why-surge.mdx
+++ b/docs/pages/overview/why-surge.mdx
@@ -1,11 +1,11 @@
 ---
 title: Surge | Why Surge?
-description: Need for Rollups infrastructure on Bitcoin
+description: The Need for Rollups Infrastructure on Bitcoin
 ---
 
-# Why Surge? [Need for Rollups infrastructure on Bitcoin]
+# Why Surge? [The Need for Rollups Infrastructure on Bitcoin]
 
-Bitcoin L2s are not just a narrative, hype, or even experimental; they're an adaptive response from the Bitcoin community to grow beyond scalability limitations. It's easy to forget that Bitcoin is a network and an asset: BTC. It's the most decentralized and secure Network, with BTC having the highest market capitalization.
+Bitcoin L2s are not just a narrative, hype, or experiment; they're an adaptive response from the Bitcoin community to overcome scalability limitations. It's easy to forget that Bitcoin is a network and an asset (BTC), representing the most decentralized and secure blockchain with highest market capitalization.
 
 **A fundamental question:** Why Bitcoin L2s now? The following events have an answer.
 
