feat: added breif about the surge high availability sequencer

--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -7,11 +7,11 @@ description: Modular Rollup as a Service for Bitcoin Ecosystem
 
 # Introduction to Surge [Modular Rollup as a Service for Bitcoin Ecosystem]
 
-Surge is a modular Rollup-as-a-Service (RaaS) platform for the Bitcoin ecosystem. Its purpose is to facilitate global economic growth and innovation through Layer 2 solutions, specifically Rollups on top of the most sounded, hard and decentralized money form ever existed - "Bitcoin".
+Surge is a modular Rollup-as-a-Service (RaaS) platform tailored for the Bitcoin ecosystem. Its mission is to facilitate global economic growth and innovation through Layer 2 solutions, specifically Rollups, on top of the most sound, hard and decentralized form of money ever existed - "Bitcoin".
 
-Surge provides a platform for launching high-performance, customizable, general purpose or application-specific Rollups on Bitcoin, significantly reducing their time to market.
+Surge provides a platform for launching high-performance, customizable, general purpose or application-specific Rollups on Bitcoin, significantly reducing time to market.
 
-The primary goal of Surge is to address three significant issues in the Bitcoin ecosystem using Rollups:
+The core objective of Surge is to address three critical challenges in the Bitcoin ecosystem through Rollups:
 
 - <p className="_list-paragraph">
     Providing a secured L2 bridge with Bitcoin Security.
@@ -24,14 +24,14 @@ The primary goal of Surge is to address three significant issues in the Bitcoin 
     existing dApps.
   </p>
 
-We are achieving this with a novel **l.,,"Superstack"** layer on top of Bitcoin.
+We are achieving this with a novel **"Superstack"** layer on top of Bitcoin.
 
-The **Superstack** is an intermediate, foundational, PoS-based layer that has 3 essential components:
+The **Superstack** is an intermediate, foundational, PoS-based layer comprising three essential components:
 
-- **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes, where signature and key-share generation by decentralized network nodes.</p>
-- **ZKP Verifier with Proof Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate proofs from the Rollups and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
+- **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes (TSS), where decentralized network nodes handle signature and key-share generation.</p>
+- **ZKP Verifier with Proof Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
 - **Utilities:** <p className="_list-paragraph">Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.</p>
 
-With these components in place, Surge will become a comprehensive platform for building, launching, innovating, and growing the Rollup ecosystem. Surge also provides out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
+With these components, Surge will become a comprehensive platform for building, launching, innovating, and expanding the Rollup ecosystem. Surge also offers out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
 
-This approach enables the creation of use case-specific rollups and multiple execution environments on top of Bitcoin, which can position BTC as a real currency beyond just payments.
+This approach facilitates the creation of use case-specific rollups and multiple execution environments on Bitcoin, which can position BTC as a real currency beyond just payments.
