--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -15,8 +15,10 @@ import RunNode from "../components/RunNode.tsx";
 import Resources from "../components/Resources.tsx";
 import BitcoinPlayground from "../components/BitcoinPlayground.tsx";
 
-<div className="max-w-[1200px] mx-auto vp-doc relative px-[24px] md:mt-[12px] md:px-0 md:mb-20 test">
-  <div className="flex flex-col items-center justify-center">
+<div className="w-full vp-doc relative test">
+<img className="w-full h-[500px] absolute top-0 left-0 z-[0] dark:hidden" src="assets/docs_bg_light.png"/>
+<img className="w-full h-[500px] absolute top-0 left-0 z-[0] hidden dark:block" src="assets/docs_bg_dark.png"/>
+  <div className="flex flex-col items-center justify-center relative z-[1] max-w-[1200px] mx-auto px-[24px] md:mt-[12px] md:px-0 md:mb-20">
     {/* <img className="hidden dark:block h-24" src="/assets/surge_short_dark.svg" alt="docs" /> */}
     {/* <img className="block dark:hidden h-24" src="/assets/surge_short_lg.svg" alt="docs" /> */}
       <HomePage.Tagline className="!text-[40px] !font-bold mb-4">Build with Surge</HomePage.Tagline>
