fix: content update

--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -13,26 +13,26 @@ Lets see the Bitcoin Roadmap from 2013 to Now,
 
 ZK Rollups are a layer-2 scaling solution that perform transaction execution outside the main blockchain (layer-1) while maintaining data integrity and security through proofs.
 
-**Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges,** and **BitVM** collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
+**Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges** collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
 
 ## Trust-Minimized zk Rollup
 Lets Understand, How can we build a trust-minimised ZK Rollup
 
 <ZoomImage src="/assets/trustless-zk.png" alt="Trustless Zk rollup" />
 
-### Main Limitations,
+### Main Limitations
 
 - Bitcoin Cannot Verify the ZK Proof by Design
 
 - UTXO Model Constraints - Validity on Multi Sig
 
-## BitVM ZK Rollups,
+## ZK Rollups
 
-BitVM makes things interesting by enabling the ZK proof verifications within the Bitcoin ecosystem with "1 / n trust assumptions", paving the way for enhanced scalability and security.
+BitVM whitepaper made things interesting by showing the ways for ZK proof verifications within the Bitcoin ecosystem with "1 / n trust assumptions", paving the way for enhanced scalability and security.
 
 <ZoomImage src="/assets/bitvm.png" alt="bitVM" />
 
-### Limitations,
+### Limitations
 
 - Dishonest Sequencer
 
@@ -54,9 +54,9 @@ Data availability can be posted anywhere off chain for
 
 It can be posted on the any DA layers,
 
-- Etheruem DA
+- Celestia DA
 
-- Celestia DA .
+- Bitcoin DA
 
 - Other DA Layers.
 
