--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -29,7 +29,7 @@ We are achieving this with a novel **"Superstack"** layer on top of Bitcoin.
 The **Superstack** is an intermediate, foundational, PoS-based layer comprising three essential components:
 
 - **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes (TSS), where decentralized network nodes handle signature and key-share generation.</p>
-- **ZKP Verifier with Proof Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
+- **zk Proof Verifier with Bitcoin Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
 - **Utilities:** <p className="_list-paragraph">Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.</p>
 
 With these components, Surge will become a comprehensive platform for building, launching, innovating, and expanding the Rollup ecosystem. Surge also offers out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
