--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -16,8 +16,8 @@ import Resources from "../components/Resources.tsx";
 import BitcoinPlayground from "../components/BitcoinPlayground.tsx";
 
 <div className="w-full vp-doc relative test">
-<img className="w-full h-[500px] absolute top-0 left-0 z-[0] dark:hidden" src="assets/docs_bg_light.png"/>
-<img className="w-full h-[500px] absolute top-0 left-0 z-[0] hidden dark:block" src="assets/docs_bg_dark.png"/>
+<img className="w-full absolute top-0 left-0 z-[0] opacity-60 dark:hidden" src="assets/docs_bg_light.png"/>
+<img className="w-full absolute top-0 left-0 z-[0] opacity-60 hidden dark:block" src="assets/docs_bg_dark.png"/>
   <div className="flex flex-col items-center justify-center relative z-[1] max-w-[1200px] mx-auto px-[24px] md:mt-[12px] md:px-0 md:mb-20">
     {/* <img className="hidden dark:block h-24" src="/assets/surge_short_dark.svg" alt="docs" /> */}
     {/* <img className="block dark:hidden h-24" src="/assets/surge_short_lg.svg" alt="docs" /> */}
