--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -9,31 +9,31 @@ import ZoomImage from "../../components/ZoomImage";
 
 ## Overview
 
-We took a modular first approach to design our architecture. This not only ensures a highly customizable and tailored end product but also heightens the security & performance of L2s built on us.
+Our architecture is designed with a modular-first approach, ensuring a highly customizable and tailored end product. This not only enhances the security and performance of Layer 2 solutions built on Surge but also allows for flexibility in integrating various components as per specific requirements.
 
-## Modular Architecture Model
+## Layered Architecture Model
 
 Surge provides a layered approach for launching Bitcoin rollups by separating the Executions, Settlement and Data Availability
 
-1. **Execution Layer:** Supports multiple virtual machines (VMs) including EVM and MoveVM, allowing developers to build on VM of their choice.
+1. **Execution Layer:** Supports multiple virtual machines (VMs) including EVM and MoveVM, offering developers the flexibility to build on their preferred VM.
 
-2. **Settlement Layer:** Manages transaction finalization using a robust zero knowledge proofs, enabling for fast settlements.
+2. **Settlement Layer:** Manages transaction finalization through robust zero knowledge proofs, enabling for fast and secure settlements.
 
-3. **Data Layer:** Maintains data availability for the chain and data integrity, crucial for transparent operations across the platform.
+3. **Data Layer:** Ensures data availability and integrity for the chain, crucial for transparent operations across the platform.
 
 <ZoomImage src="/assets/architecture-model.png" alt="architecture model" />
 
 ### Ecosystem Tooling
 
-By allowing users to build over any VM, you have the added benefit of existing tooling and tooling Surge provides for dApps, enabling them to easily integrate and migrate to Bitcoin L2s to be available in the Bitcoin ecosystem
+Surge enables the use of existing tooling along with the specialized tooling we provide. This facilitates easy integration and migration of dApps to Bitcoin Layer 2 solutions, allowing them to thrive within the Bitcoin ecosystem.
 
 ### Execution & Frameworks
 
-Out of the box, we plan on supporting multiple VMs like EVM, MoveVM., with planned extensions to other VMs for enhanced flexibility. This also, lets us build on top of any rollup framework like OPStack or Arbitrum Orbit and transactions are batched via our modular framework generating ZK proofs and eventually settling on Bitcoin.
+Out of the box, we plan on supports VMs like EVM, MoveVM., with planned extensions to other VMs to enhance flexibility. Our modular framework allows us to build on top of any rollup framework, such as zk Stack & Optimistic frameworks. Transactions are batched and processed through our framework, generating ZK proofs that eventually settle on Bitcoin.
 
 ### Surge Superstack
 
-Our proprietary Surge Superstack layer acts as an intermediary that sits on top of bitcoin. Superstack is a PoS protocol-based layer which secures the network and facilitates the proof verification of transactions. Superstack accepts the ZK proofs from the execution layers and pushes the transaction data to the DA layer and verified Merkle state hash to the Bitcoin L1 layer through inscriptions. By inscribing the data on the Bitcoin we are inheriting the security of Bitcoin.
+Our proprietary Surge Superstack layer acts as an intermediary that sits atop Bitcoin. Superstack is a PoS protocol-based layer which secures the network and facilitates the proof verification of transactions. Superstack accepts the ZK proofs from the execution layers and pushes the transaction data to the DA layer and verified Merkle state hash to the Bitcoin L1 layer through inscriptions. By inscribing the data on the Bitcoin we are inheriting the security of Bitcoin.
 
 <ZoomImage
   className="md:w-[60%] mx-auto"
@@ -53,7 +53,7 @@ Surge offers multiple alternate Data Availability (DA) options to suit different
 
 - Native Bitcoin DA Layer: Options like Nubit for those preferring integration closely tied to Bitcoin.
 
-- Non-native DA Layers: Alternatives like Avail, Eigen DA, and Celestia DA, offer flexibility and scalability.
+- Non-native DA Layers: Alternatives like Celestia DA, 0G Labs DA, and others offer flexibility and scalability.
 
 ## Architecture Layers
 
