fix: dark theme color update

--- a/docs/pages/metalayer/utilities/native-stable-coins.mdx
+++ b/docs/pages/metalayer/utilities/native-stable-coins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Native Stable Coins
+title: StableCoin
 description: Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity.
 ---
 
