fix: sequencer related content update

--- a/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
+++ b/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
@@ -1,11 +1,11 @@
 ---
-title: Upcoming Bitcoin L2's
+title: Bitcoin L2's Landscape 
 description: Upcoming and existing Bitcoin L2's and List of teams working on it
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Upcoming Bitcoin L2's [Upcoming and existing Bitcoin L2's and List of teams working on it]
+# Bitcoin L2's Landscape [Upcoming and existing Bitcoin L2's and List of teams working on it]
 
 At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
 This section provides a comprehensive overview of both upcoming and existing Bitcoin Layer 2 solutions.
