--- a/docs/pages/surge-building-blocks/multi-vm.mdx
+++ b/docs/pages/surge-building-blocks/multi-vm.mdx
@@ -1,11 +1,11 @@
 ---
-title: Bitcoin ZK Rollups
+title: Multiple VM Execution
 description: The role of Zero knowledge proofs in Bitcoin L2s
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Bitcoin ZK Rollups
+# Multiple VM Execution
 
 Zero-Knowledge (ZK) proofs significantly enhance the scalability, security, and efficiency of blockchain technologies. ZK-Rollups, in particular, are a type of Layer 2 scaling solution that can significantly improve Bitcoin's transaction throughput and reduce computational load on the main blockchain..
 
