fix: minor content udpate

--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -15,8 +15,8 @@ ZK Rollups are a layer-2 scaling solution that perform transaction execution out
 
 **Zero-Knowledge Proofs (ZKPs), Segregated Witness (SegWit), Blockchain Bridges** collectively lay the groundwork for implementing ZK Rollups on Bitcoin.
 
-## Trust-Minimized zk Rollup
-Lets Understand, How can we build a trust-minimised ZK Rollup
+## Trust-Minimized Rollups
+Lets Understand, How can we build a trust-minimised Rollup using ZK
 
 <ZoomImage src="/assets/trustless-zk.png" alt="Trustless Zk rollup" />
 
@@ -26,7 +26,7 @@ Lets Understand, How can we build a trust-minimised ZK Rollup
 
 - UTXO Model Constraints - Validity on Multi Sig
 
-## ZK Rollups
+## Bitcoin Rollups
 
 BitVM whitepaper made things interesting by showing the ways for ZK proof verifications within the Bitcoin ecosystem with "1 / n trust assumptions", paving the way for enhanced scalability and security.
 
@@ -60,9 +60,7 @@ It can be posted on the any DA layers,
 
 - Other DA Layers.
 
-**Limitations with this,**
-
-How can they cross compose and share liquidity ?
+**Limitations with this,** How can they cross compose and share liquidity ?
 
 But this can solved with the ZKPs which allows the Interactions with all the DA layers can be trustless allowing cross compute and shared liquidity
 
@@ -71,17 +69,13 @@ But this can solved with the ZKPs which allows the Interactions with all the DA 
 ## Challenges in building Rollups on Bitcoin
 
 #### Non-Turing completeness
-
 Bitcoin's non-Turing complete nature limited its utility, only shifted after Ordinals
 
 #### No Existing Frameworks
-
 The absence of established frameworks on Bitcoin for rollup development has been a significant barrier
 
 #### Complex Development
-
 Missing familiar tech stacks, increasing the complexity to create rollup on Bitcoin.
 
 #### Skepticism around Trust Assumptions
-
 Skepticism from the Community due to Trust Assumptions in the rollup solutions
