--- a/docs/pages/metalayer/zkp-verifier-network.mdx
+++ b/docs/pages/metalayer/zkp-verifier-network.mdx
@@ -1,11 +1,11 @@
 ---
-title: Surge | ZKP Verifier Network
+title: Surge | Decentralized Verifier Network
 description: PoS based ZKP verifier network
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# ZKP Verifier Network [PoS based ZKP verifier network]
+# Decentralized Verifier Network [PoS based ZK Proof verifier network]
 
 Our ultimate goal is to enable native verification of Zero-Knowledge Proofs (ZKPs) within Bitcoin blocks. This advancement requires the introduction of new opcodes—such as OP_verifystarkproof in Bitcoin's script language. To address this gap, we are developing a unique ZKP Verifier Network that can be seamlessly integrated with Bitcoin. This module will enable information to be verified and then inscribed onto the Bitcoin blockchain, ensuring enhanced security and reliability until native support is fully developed and adopted.
 
