--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -24,12 +24,14 @@ The core objective of Surge is to address three critical challenges in the Bitco
     existing dApps.
   </p>
 
-We are achieving this with a novel **"Superstack"** layer on top of Bitcoin.
 
-The **Superstack** is an intermediate, foundational, PoS-based layer comprising three essential components:
+_**SuperStack is a MetaLayer on Bitcoin**_
 
+
+The Superstack is an intermediate, foundational, PoS-based layer comprising three essential components:
+
+- **Decentralized Verifier Network:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
 - **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes (TSS), where decentralized network nodes handle signature and key-share generation.</p>
-- **zk Proof Verifier with Bitcoin Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
 - **Utilities:** <p className="_list-paragraph">Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.</p>
 
 With these components, Surge will become a comprehensive platform for building, launching, innovating, and expanding the Rollup ecosystem. Surge also offers out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
