--- a/docs/pages/metalayer/superstack.mdx
+++ b/docs/pages/metalayer/superstack.mdx
@@ -9,7 +9,7 @@ import ZoomImage from "../../components/ZoomImage";
 
 ## Overview
 
-The Surge Superstack serves as an intermediate layer above the Bitcoin Settlement Layer. It serves as a foundational enabling scalable Rollups by processing Zero-Knowledge Proofs (ZK proofs) from execution layers and managing data via the Data Availability (DA) layer and Merkle state hashes inscribed onto Bitcoin.
+The Surge Superstack operates as a crucial intermediate layer above the Bitcoin Settlement Layer, facilitating the scalable deployment of rollups. By processing Zero-Knowledge Proofs (ZK proofs) from execution layers and managing data via the Data Availability (DA) layer, the Superstack ensures the secure inscription of Merkle state hashes onto Bitcoin. This architecture not only enhances scalability but also preserves the core principles of decentralization and security inherent to Bitcoin.
 
 ## Architecture and Network
 
@@ -19,11 +19,14 @@ The Surge Superstack serves as an intermediate layer above the Bitcoin Settlemen
 
 ## Core Functions of Superstack
 
-- **ZKP Verification Layer:** Validates the correctness of transaction proofs without revealing any underlying data, enhancing privacy and security. Acts as a crucial layer for trustless and verifiable rollup interactions within Bitcoin.
+- **Decentralized Verification Layer:** The ZKP Verification Layer is responsible for validating the correctness of transaction proofs without exposing any underlying data. This enhances both privacy and security, acting as a foundational layer for trustless and verifiable rollup interactions on Bitcoin.
 
-- **MPC TSS Secure Bridge:** Provides a secure, trust-minimized bridge 2-way peg between Bitcoin and rollups. Utilizes Threshold Signature Schemes (TSS) to manage and secure the pegs.
+- **MPC TSS Secure Bridge:** This component provides a secure, trust-minimized bridge for a 2-way peg between Bitcoin and rollups. It utilizes Threshold Signature Schemes (TSS) to securely manage and safeguard the pegs, ensuring the integrity of cross-chain asset transfers.
 
-- **Utilities for Rollups:** Includes essential tools such as oracles, indexers, and bridges for runes and ordinals.
+- **Utilities for Rollups:** The Superstack includes a suite of essential tools that support the development and operation of rollups:
+  - **Oracles:** Reliable data feeds that provide smart contracts with accurate and real-time information.
+  - **Indexers:** Efficient tools for organizing and accessing transaction data, supporting scalability.
+  - **Bridges for Runes and Ordinals:** Specialized bridges that enable seamless integration and interaction with Runes and Ordinals, expanding the utility of rollups.
 
 <ZoomImage
   src="/assets/superstack-core-functions.png"
