--- a/docs/pages/resources/quick-links.mdx
+++ b/docs/pages/resources/quick-links.mdx
@@ -5,3 +5,7 @@ Website: [https://surge.build](https://surge.build)
 Twitter: [https://x.com/surgebuild](https://x.com/surgebuild)
 
 Telegram: [https://t.me/surgebuild](https://t.me/surgebuild)
+
+LinkedIn:  [https://linkedin.com/company/surgebuild](https://www.linkedin.com/company/surgebuild)
+
+Blog: [https://surge.build/blog](https://surge.build/blog)
