--- a/docs/pages/surge-building-blocks/rollup-frameworks.mdx
+++ b/docs/pages/surge-building-blocks/rollup-frameworks.mdx
@@ -1,17 +1,15 @@
 ---
-title: Bitcoin ZK Rollups
+title: Bitcoin Rollup Frameworks
 description: The role of Zero knowledge proofs in Bitcoin L2s
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Bitcoin ZK Rollups
+# Bitcoin Rollup Framework
 
-Zero-Knowledge (ZK) proofs significantly enhance the scalability, security, and efficiency of blockchain technologies. ZK-Rollups, in particular, are a type of Layer 2 scaling solution that can significantly improve Bitcoin's transaction throughput and reduce computational load on the main blockchain..
+Rollup framework is designed to extend Bitcoin’s functionality by enabling scalable, secure, and efficient execution of transactions and smart contracts off-chain. By leveraging rollup technology, this framework allows for higher throughput, reduced transaction costs, and enhanced privacy, all while maintaining the security guarantees of Bitcoin/
 
-The key idea behind ZK-Rollups is to batch multiple transactions into a single cryptographic proof, which is then submitted to the main Bitcoin blockchain. This proof verifies the validity of the bundled transactions without revealing their details, providing a scalable and privacy-preserving way to process transactions off-chain.
-
-ZK-Rollups manage blockchain bloat by reducing on-chain data. They post only the proof and minimal transaction data. The ZK proofs alone assure the correctness of transactions, which can be verified much faster.
+At its core, the framework supports various types of rollups, each optimized for different use cases, such as general-purpose smart contracts, specialized financial applications, or privacy-focused transactions. The modularity of this framework allows developers to select the most appropriate rollup type for their specific needs, providing flexibility in design and deployment
 
 <p align="center">
   <ZoomImage width="90%" src="/assets/zkflow.png" alt="Understanding rollups" />
